--- a/backend/package.json
+++ b/backend/package.json
@@ -1,18 +1,19 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "main": "index.js", 
+  "main": "index.js",
   "license": "ISC",
   "scripts": {
     "dev": "ts-node-dev -r dotenv/config --files src/server.ts"
   },
   "keywords": [],
   "author": "",
- 
   "description": "",
   "dependencies": {
     "@fastify/cors": "^11.1.0",
     "@fastify/jwt": "^10.0.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@prisma/client": "^6.17.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
